# otus-cpp-hw_02

./: .travis.yml  CMakeLists.txt  build.sh  commontypes.h  ip_filter.cpp  ip_sort_filter.h  main.cpp
filter/: ip_filter.h
io/: io_filter.h  ip_filter.cpp  ip_inout.h
sort/: ip_sort.h
tests/: test_starter.cpp
